--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/christopherdegroot/tinyapp#readme",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2"
   }
