--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/nodemon -L express_server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,8 @@
     "express": "^4.17.2"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^9.2.0",
     "nodemon": "^2.0.15"
   }
 }
